[package]
name = "ccproxy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = { version = "1", features = ["full"] }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12.7"}
http-body-util = "0.1"
hyper-util = { version = "0.1", features = ["full"] }
log4rs = "1.3.0"
log = "0.4.22"